nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /var/folders/jn/kphqd_553871ydfcs_2_5kbm0000gn/T/go-build3909895442/b001/exe/kompose convert -f docker-compose.yaml
    kompose.version: 1.27.0 (eb9f15b2)
  creationTimestamp: null
  labels:
    io.kompose.service: nginx
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: nginx
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: /var/folders/jn/kphqd_553871ydfcs_2_5kbm0000gn/T/go-build3909895442/b001/exe/kompose convert -f docker-compose.yaml
        kompose.version: 1.27.0 (eb9f15b2)
      creationTimestamp: null
      labels:
        io.kompose.network/kompose-default: "true"
        io.kompose.service: nginx
    spec:
      containers:
        - image: nginx
          name: nginx
          ports:
            - containerPort: 80
              hostPort: 80
              protocol: TCP
          resources: {}
      restartPolicy: Always
status: {}
