redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ./kompose convert
    kompose.version: 1.28.0 (4d1ce961)
  creationTimestamp: null
  labels:
    io.kompose.service: redis
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: redis
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: ./kompose convert
        kompose.version: 1.28.0 (4d1ce961)
      creationTimestamp: null
      labels:
        io.kompose.network/kompose-default: "true"
        io.kompose.service: redis
    spec:
      containers:
        - image: redis:latest
          name: redis
          resources: {}
      restartPolicy: Always
status: {}
