nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: /var/folders/jn/kphqd_553871ydfcs_2_5kbm0000gn/T/go-build3909895442/b001/exe/kompose convert -f docker-compose.yaml
    kompose.version: 1.27.0 (eb9f15b2)
  creationTimestamp: null
  labels:
    io.kompose.service: nginx
  name: nginx
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    io.kompose.service: nginx
status:
  loadBalancer: {}
